--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
-
 html {
     width: 100%;
     height: 100%;
@@ -7,26 +5,33 @@ html {
 
 body {
     margin: 0px;
-    background-color: #44f;
-    font-family: "Roboto Mono", monospace;
+    padding: 10px;
+    background-color: #0A0A0A;
+    font-family: "Iosevka Web", monospace;
+    font-size: 14pt;
+    color: #bbb;
+    letter-spacing: 2px;
+}
+
+h1 {
+    font-style: italic;
+    letter-spacing: 7px;
     color: #fff;
 }
 
-.title {
-    font-style: italic;
-    position: fixed;
-    width: 500px;
-    padding: 0px;
-    margin: 0px;
-    height: 18px;
-    font-size: 18px;
-    text-align: center;
-    left: calc(50% - 250px);
-    top: calc(50% - 8px);
-    letter-spacing: 10px;
+::selection {
+    color: #fff;
+    text-shadow: 0px 0px 10px #fff;
 }
 
-::selection {
-    background-color: #fff;
-    color: #000;
+hr {
+    color: #222;
+}
+
+li {
+    list-style: lower-greek;
+}
+
+li::marker {
+    color: #222;
 }
